# omni-emulador-elysium-games

./: .gitignore  build.gradle.kts  build_err.txt  gradle.properties  gradlew  settings.gradle.kts
.idx/: dev.nix
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/elysium/console/: ElysiumApplication.kt  MainActivity.kt
app/src/main/java/com/elysium/console/navigation/: NavGraph.kt
app/src/main/java/com/elysium/console/ui/component/: GameDetailSheet.kt  RomCard.kt  TelemetryBar.kt  VanguardGamepad.kt  VanguardHud.kt
app/src/main/java/com/elysium/console/ui/screen/: DashboardScreen.kt  PlayerScreen.kt  SettingsScreen.kt  SplashScreen.kt
app/src/main/java/com/elysium/console/ui/theme/: Theme.kt
app/src/main/java/com/elysium/console/viewmodel/: DashboardViewModel.kt  EmulationViewModel.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
core-bridge/: build.gradle.kts  consumer-rules.pro
core-bridge/src/main/cpp/: CMakeLists.txt  audio_engine.h  bridge.cpp  hardware_buffer_renderer.h  input_manager.h  libretro.h  thread_utils.h
core-bridge/src/main/java/com/elysium/console/bridge/: ElysiumBridge.kt  RetroButton.kt
data/: build.gradle.kts  consumer-rules.pro
data/src/main/: AndroidManifest.xml
data/src/main/assets/data/: games_db.json
data/src/main/java/com/elysium/console/data/: CoreRepositoryImpl.kt  RomRepository.kt  SettingsManager.kt  ShizukuShellExecutor.kt  SystemTelemetryProvider.kt
data/src/main/java/com/elysium/console/data/downloader/: CoreDownloader.kt
data/src/main/java/com/elysium/console/data/util/: MetadataScraper.kt  NucleusFileProvisioner.kt
domain/: build.gradle.kts
domain/src/main/java/com/elysium/console/domain/model/: EmulatorCore.kt  Platform.kt  RomFile.kt  TelemetryData.kt
domain/src/main/java/com/elysium/console/domain/repository/: CoreRepository.kt  HardwareMonitor.kt  RomRepository.kt
domain/src/main/java/com/elysium/console/domain/usecase/: SelectCoreUseCase.kt  ShellCommandExecutor.kt  TelemetryAgentUseCase.kt  ThermalGovernorUseCase.kt
gradle/: libs.versions.toml
modules-src/: README.md
